<resources>
    <string name="app_name">MiPrimeraAplicacion</string>
    <string name="titulo">Mi First App</string>
    <string name="tituloSiguiente">Siguiente</string>
    <string name="tituloMenu">Menu</string>
    <string name="tituloColores">Colores</string>
    <string name="tituloAnimales">Animales</string>
    <string name="tituloFrutas">Frutas</string>
    <string name="textoVaca">Vaca</string>
    <string name="textoPerro">Perro</string>
    <string name="textoGato">Gato</string>
    <string name="textoManzana">Manzana</string>
    <string name="textoBanana">Banana</string>
    <string name="textoPera">Pera</string>
    <string name="textoRojo">Rojo</string>
    <string name="textoAzul">Azul</string>
    <string name="textoVerde">Verde</string>
    <string name="textoVolver">Volver</string>
    <string name="selectOptionApp">Seleccionar una Opción</string>
    <string name="textoAprendizaje">Aprender</string>
    <string name="textoJuego">Jugar</string>
    <string name="textoJuego1">Juego 1</string>
    <string name="textoJuego2">Juego 2</string>
    <string name="textoJuego3">Juego 3</string>
    <string name="textoJuego4">Juego 4</string>
    <string name="seleccionar_opcion">Selecciona Opcion Correcta</string>
    <string name="prod_sound">Producir sonido:</string>
    <string name="continuar">Continuar</string>
    <string name="fallaste">Fallaste</string>
    <string name="ganaste">Ganaste</string>
    <string name="finalizar">Finalizar</string>
    <string name="titleFormRegister">Formulario de Registro</string>
    <string name="labelNombre">Escribe tu Nombre</string>
    <string name="labelApellido">Escribe tu Apellido</string>
    <string name="labelEdad">Digita tu Edad</string>
    <string name="labelGenero">Selecciona tu Género sexual</string>
    <string name="labelColegio">Escribe el Nombre de tu Colegio</string>
    <string name="labelNickname">Escribe tu Nickname (apodo)</string>
    <string name="rbM">Masculino</string>
    <string name="rbF">Femenino</string>
    <string name="txtGuardar">Guardar</string>
    <string name="txtInteresesTitle">Selecciona tus Intereses</string>
    <string name="txtTJugarV">Jugar Videojuegos</string>
    <string name="txtTrotar">Trotar</string>
    <string name="txtPeliculas">Ver Películas</string>
    <string name="txtLeer">Leer</string>
    <string name="txtComer">Comer</string>
    <string name="txtEscuchar">Escuhar Música</string>
    <string name="txtTitleDescript">Información de Participante</string>
    <string name="tu_nombre">Tu nombre es:</string>
    <string name="tu_apellido">Tu apellido es:</string>
    <string name="tu_edad">Tu edad es:</string>
    <string name="tu_genero">Tu genero es:</string>
    <string name="tu_colegio">Tu colegio es:</string>
    <string name="tu_nickname">Tu nickname es:</string>
    <string name="tus_intereses">Tus intereses son:</string>
    <string name="ver_todo">Ver Todo</string>
</resources>