<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuApp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloMenu"
        android:textSize="35sp"
        android:textColor="@color/purple_500"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="10sp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/gray_50"
        android:layout_marginTop="100dp"
        android:paddingVertical="15dp">

        <Button
            android:id="@+id/btnColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloColores"
            android:layout_gravity="center"
            android:paddingHorizontal="60dp"
            android:textSize="28sp"
            android:backgroundTint="@color/red_800" />
        <Button
            android:id="@+id/btnFrutas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloFrutas"
            android:layout_gravity="center"
            android:paddingHorizontal="60dp"
            android:textSize="28sp"
            android:layout_marginVertical="60dp"
            android:backgroundTint="@color/light_green_700"/>
        <Button
            android:id="@+id/btnAnimales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloAnimales"
            android:layout_gravity="center"
            android:paddingHorizontal="60dp"
            android:textSize="28sp"
            android:backgroundTint="@color/cl_2"/>

        <TextView
            android:id="@+id/backScreenMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/textoVolver"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"/>

    </LinearLayout>
</LinearLayout>