<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormularioRegistro">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleFormRegister"
            android:gravity="center"
            android:textSize="30sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_marginBottom="30dp"/>
        
        <LinearLayout
            android:id="@+id/formulario"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelNombre"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/etApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelApellido"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/etEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelEdad"
                android:inputType="number"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelGenero"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/spOrientacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etColegio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelColegio"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/etNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelNickname"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtInteresesTitle"
                android:textSize="20sp"/>
            <LinearLayout
                android:id="@+id/optIntereses"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ListView
                    android:id="@+id/lvIntereses"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    />

                <!--<CheckBox
                    android:id="@+id/cbJugarV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTJugarV"
                    android:textSize="18sp"/>
                <CheckBox
                    android:id="@+id/cbTrotar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTrotar"
                    android:textSize="18sp"/>
                <CheckBox
                    android:id="@+id/cbPeliculas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPeliculas"
                    android:textSize="18sp"/>

                <CheckBox
                    android:id="@+id/cbLeer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtLeer"
                    android:textSize="18sp"/>

                <CheckBox
                    android:id="@+id/cbComer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtComer"
                    android:textSize="18sp"/>

                <CheckBox
                    android:id="@+id/cbEscuchar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtEscuchar"
                    android:textSize="18sp"/>-->
            </LinearLayout>

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtGuardar"
                android:textSize="23sp"
                android:layout_gravity="center"
                android:paddingHorizontal="50sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/design_default_color_primary"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>