<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainColores"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrutasView">
    <TextView
        android:id="@+id/txtTituloFrutas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloFrutas"
        android:textSize="35sp"
        android:textColor="@color/light_green_700"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="10sp"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:id="@+id/containerFrutas"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp">
        <LinearLayout
            android:id="@+id/cntManzana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <ImageView
                android:id="@+id/imgImagenManzana"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/manzana"
                android:gravity="start"/>
            <TextView
                android:id="@+id/txtTituloManzana"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textoManzana"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cntBanana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <ImageView
                android:id="@+id/imgImagenBanana"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/platano"
                android:gravity="start"/>
            <TextView
                android:id="@+id/txtTituloBanana"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textoBanana"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cntPera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <ImageView
                android:id="@+id/imgImagenPera"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/pera"
                android:gravity="start"/>
            <TextView
                android:id="@+id/txtTituloPera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textoPera"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>
        <TextView
            android:id="@+id/backScreenFrutas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/textoVolver"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
</LinearLayout>