<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainColores"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnimalesView">
    <TextView
        android:id="@+id/txtTituloAnimales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloAnimales"
        android:textSize="35sp"
        android:textColor="@color/cl_2"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="10sp"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:id="@+id/containerAnimales"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp">
        <LinearLayout
            android:id="@+id/cntVaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <ImageView
                android:id="@+id/imgImagenVaca"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/vaca"
                android:gravity="start"/>
            <TextView
                android:id="@+id/txtTituloVaca"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textoVaca"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cntPerro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <ImageView
                android:id="@+id/imgImagenPerro"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/dogoargentino"
                android:gravity="start"/>
            <TextView
                android:id="@+id/txtTituloPerro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textoPerro"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cntGato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <ImageView
                android:id="@+id/imgImagenGato"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/gato"
                android:gravity="start"
                />
            <TextView
                android:id="@+id/txtTituloGato"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textoGato"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>

        <TextView
            android:id="@+id/backScreenAnimales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/textoVolver"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
</LinearLayout>