<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainColores"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColoresView">
    <TextView
        android:id="@+id/txtTotuloColores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloColores"
        android:textSize="35sp"
        android:textColor="@color/red_800"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="10sp"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:id="@+id/containerColores"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp">
        <LinearLayout
            android:id="@+id/cntColorRojo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <ImageView
                android:id="@+id/imgImagenRojo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/circulrojo"
                android:gravity="start"/>
            <TextView
                android:id="@+id/txtTituloRojo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textoRojo"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cntColorAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <ImageView
                android:id="@+id/imgImagenAzul"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:src="@drawable/circulazul"
                android:gravity="start"/>
            <TextView
                android:id="@+id/txtTituloAzul"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textoAzul"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cntColorVerde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <ImageView
                android:id="@+id/imgImagenVerde"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:src="@drawable/circulverde"
                android:gravity="start"/>
            <TextView
                android:id="@+id/txtTituloVerde"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textoVerde"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>

        <TextView
            android:id="@+id/backScreenColores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/textoVolver"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
</LinearLayout>