<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionalView">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectOptionApp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="10sp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/gray_50"
        android:layout_marginTop="100dp"
        android:paddingVertical="15dp">
        <Button
            android:id="@+id/btnAprender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoAprendizaje"
            android:layout_gravity="center"
            android:paddingHorizontal="60dp"
            android:textSize="28sp"
            android:backgroundTint="@color/blue_600" />

        <Button
            android:id="@+id/btnJugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoJuego"
            android:layout_gravity="center"
            android:paddingHorizontal="60dp"
            android:textSize="28sp"
            android:layout_marginVertical="60dp"
            android:backgroundTint="@color/pink_500"/>

        <!--<TextView
            android:id="@+id/backSCreenOptionalMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/textoVolver"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"/>-->
    </LinearLayout>
</LinearLayout>