<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game3"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game3">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoJuego3"
        android:textSize="35sp"
        android:textColor="@color/bluegray_900"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="10sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_opcion"
        android:textSize="25sp"
        android:textColor="@color/bluegray_900"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center|center_vertical"
        android:layout_marginHorizontal="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/prod_sound"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:textColor="@color/bluegray_900"
            android:fontFamily="sans-serif-black"
            android:layout_gravity="center_horizontal"/>
        <ImageView
            android:id="@+id/imgSonidoJuego3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:src="@drawable/sonido"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cntGame3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <ImageView
                android:id="@+id/imgMadre"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:onClick="clickHandler"
                android:src="@drawable/madre"/>

            <ImageView
                android:id="@+id/imgBebe"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:onClick="clickHandler"
                android:src="@drawable/bebe"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <ImageView
                android:id="@+id/imgPapa"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:onClick="clickHandler"
                android:src="@drawable/papa"/>

            <ImageView
                android:id="@+id/imgCuarenta"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:onClick="clickHandler"
                android:src="@drawable/cuarenta"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnNextGame3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_neutral20"
            android:textSize="25sp"
            android:layout_marginTop="40dp"
            android:text="@string/continuar" />
    </LinearLayout>
</LinearLayout>